Code cleanup. Convert to Gradle. Bumped to version 3.0.4. Added support for Minecraft 1.21+.