@@ -1,18 +1,22 @@
 package no.vestlandetmc.elevator.handler;
 
+import lombok.Getter;
+import no.vestlandetmc.elevator.ElevatorPlugin;
+import org.bukkit.scheduler.BukkitRunnable;
+
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 
-import org.bukkit.scheduler.BukkitRunnable;
-
-import no.vestlandetmc.elevator.ElevatorPlugin;
-
 public abstract class UpdateNotification extends BukkitRunnable {
 
+	@Getter
 	private static int projectId;
+	@Getter
 	private static String latestVersion = "";
 
 	public UpdateNotification(int projectId) {
@@ -23,37 +27,30 @@ public abstract class UpdateNotification extends BukkitRunnable {
 	public void run() {
 
 		try {
-			final URL url = new URL("https://api.spigotmc.org/legacy/update.php?resource=" + projectId);
+			final URI uri = new URI("https://api.spigotmc.org/legacy/update.php?resource=" + projectId);
+			final URL url = uri.toURL();
 			final URLConnection con = url.openConnection();
 
-			try(BufferedReader r = new BufferedReader(new InputStreamReader(con.getInputStream()))) {
+			try (BufferedReader r = new BufferedReader(new InputStreamReader(con.getInputStream()))) {
 				latestVersion = r.readLine();
 			}
 
-			if(isUpdateAvailable()) {
+			if (isUpdateAvailable()) {
 				onUpdateAvailable();
 			}
 
-		} catch(final IOException ex) {
-			ex.getStackTrace();
+		} catch (final IOException | URISyntaxException e) {
+			e.getStackTrace();
 		}
 	}
 
 	public abstract void onUpdateAvailable();
 
 	public static boolean isUpdateAvailable() {
-		return !latestVersion.equals(ElevatorPlugin.getInstance().getDescription().getVersion());
-	}
-
-	public static int getProjectId() {
-		return projectId;
-	}
-
-	public static String getLatestVersion() {
-		return latestVersion;
+		return !latestVersion.equals(ElevatorPlugin.getPlugin().getDescription().getVersion());
 	}
 
 	public static String getCurrentVersion() {
-		return ElevatorPlugin.getInstance().getDescription().getVersion();
+		return ElevatorPlugin.getPlugin().getDescription().getVersion();
 	}
 }
